src/test/deca/context/invalid/print_bool.deca
// Description:
//  Programme min utilisant un bool 
//
// Resultats:
//erreur
//
//
// Historique:
//    cree le 06/01/2025

{   
   println(false);

}